@@ -152,9 +152,20 @@ END (__##name)
 # define sparc_libc_ifunc_redirected(redirected_name, name, expr)	\
   __ifunc (redirected_name, name, expr(hwcap), int hwcap, INIT_ARCH)
 
+# define sparc_libc_ifunc(name, expr) sparc_libm_ifunc (name, expr)
+
 # define sparc_libm_ifunc(name, expr)				\
   __ifunc (name, name, expr, int hwcap, libm_ifunc_init)
 
-# define sparc_libc_ifunc(name, expr) sparc_libm_ifunc (name, expr)
+# define sparc_libm_ifunc_redirected(redirected_name, name, expr)	\
+  __ifunc (redirected_name, name, expr, int hwcap, libm_ifunc_init)
+
+# if defined SHARED
+# define sparc_ifunc_redirected_hidden_def(redirect_name, name) \
+  __hidden_ver1 (name, __GI_##name, redirect_name) \
+    __attribute__ ((visibility ("hidden")));
+# else
+# define sparc_ifunc_redirected_hidden_def(redirect_name, name)
+# endif
 
 #endif	/* __ASSEMBLER__ */
