@@ -1,5 +1,9 @@
 2017-10-17  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/sparc/sparc-ifunc.h (sparc_libc_ifunc): New macro.
+	(sparc_libm_ifunc_redirected): Likewise.
+	(sparc_ifunc_redirected_hidden_def): Likewise.
+
 	* config.h.in (HAVE_AS_VIS3_SUPPORT): Remove check for VIS3 support.
 	* sysdeps/sparc/configure.ac (HAVE_AS_VIS3_SUPPORT): Likewise.
 	* sysdeps//sparc/sparc32/sparcv9/fpu/multiarch/s_fdim.c: Likewise.
